--- a/TcpipStack/TcpipStack.csproj
+++ b/TcpipStack/TcpipStack.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Bogus" Version="35.6.5" />
+  </ItemGroup>
+
 </Project>
